optimize gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,15 @@ relay
 lrcleveldb
 dao/err.log
 ks_dir
-config/*.toml
+config/debug.toml
 config/debug_tokens.json
-config/mainchain.toml
-config/docker.toml
 config/default_market.json
+config/docker.toml
+config/mainchain.toml
+config/test.toml
+config/test_tokens.json
 test/*.toml
 startup.sh
 nameregistry.sh
 addparticipant.sh
-config/test_tokens.json
 nohup.out
