add kafka config

--- a/config/relay.toml
+++ b/config/relay.toml
@@ -112,3 +112,6 @@ name = "Loopring corporation"
 [zk_lock]
     zk_servers = "127.0.0.1:2181"
     connect_time_out = 10
+
+[kafka]
+    brokers = ["127.0.0.1:9092"]
