--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,3 @@
 remote_theme: dong77/minimal
+description:
+Loopring Relay is an important part of Loopring’s technology and ecosystem. It centralizes the management of offline order pools, broadcasts Loopring’s orders, and provides complete back-end services for exchanges and wallets. Based on the centralized system, we use the order broadcasting system to share orders to multiple relays to implement a network-wide order pool. Please see more detail in our comprehensive document
