--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,2 @@
 remote_theme: dong77/minimal
-description: Relayers manage orders and trades, and offer the non-custodial order-matching services as options. Relayers can receive orders from as many frontends as possible without trusting any of them. This opens the door to build an even bigger liquidity pool than any centralized exchange.
+description: Relayers manage orders and trades, and offer non-custodial order-matching services as options. Relayers can receive orders from as many frontends as possible without trusting any of them. This opens the door to build an even bigger liquidity pool than any centralized exchange.
