--- a/config/relay.toml
+++ b/config/relay.toml
@@ -47,7 +47,7 @@ title = "miner"
     cutoff_cache_clean_time = 0
 
 [gateway]
-    is_broadcast = true
+    is_broadcast = false
     max_broadcast_time = 3
     [[gateway.matrix_pub_options]]
         rooms = [ "!RoJQgzCfBKHQznReRT:localhost"]
